--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -255,6 +255,7 @@ body {
 #drpodown-search {
     display: none;
     margin-left: .3rem;
+    margin-bottom: 5px;
 }
 
 #drpodown-search > a {
@@ -812,9 +813,7 @@ display: none;
     /* SIDEBAR CHANGE */
     
     .content-section {
-        grid-column: 1/4;
-        /* VER */
-        /* grid-area: side-bar-area content-area; */
+        grid-column: 1/3;
     }
 
     .side-bar-section {
