--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -140,7 +140,7 @@ body {
     position: relative;
     display: inline-flex;
     align-items: center;
-    gap: 4vw;
+    gap: 2vw;
     margin-left: auto;
 }
 
@@ -176,8 +176,26 @@ body {
     color: black;
 }
 
-.cart a {
+.icon {
+    margin: 0 5px;
+}
+
+.icon > a {
     color: var(--secondary-color);
+}
+
+#cart-count {
+    font-size: 80%;
+    margin-left: 3px;
+    color: var(--secondary-color);
+    border-radius: 100%;
+    display: inline-block;
+    width: 5px;
+    line-height: 5px;
+    aspect-ratio: 1;
+    text-align: center;
+    position: absolute;
+    cursor: default;
 }
 
 /* Underline Animation */
