--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -496,7 +496,7 @@ display: none;
     object-fit: contain;
 }
 
-.btn-add-product {
+.btn-choice {
     /* white-space: nowrap; */
     border: 2px solid var(--primary-color);
     color: var(--third-color);
@@ -509,7 +509,7 @@ display: none;
     transition: background-color .2s, color .2s, transform .2s;
 }
 
-.btn-add-product:hover {
+.btn-choice:hover {
     background-color: var(--primary-color);
     color: var(--secondary-color);
     transform: scale(1.05,1.05);
@@ -828,6 +828,65 @@ display: none;
     background-color: var(--fifth-color);
     height: 2px;
     border-radius: 5px;
+}
+
+/* **********************  cart.html  ****************************** */
+
+.cart-section {
+    padding: 10px 0;
+}
+
+#empty-cart {
+    text-align: center;
+}
+
+#cart-container {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
+    width: 98%;
+    margin-bottom: 5px;
+    column-gap: .5rem;
+    row-gap: 1rem;
+    background-color: var(--secondary-color);
+}
+
+#summary {
+    margin-top: 30px;
+    margin-bottom: 25px;
+    text-align: center;
+}
+
+#summary p {
+    text-align: center;
+}
+
+#summary button {
+    background-color: var(--primary-color);
+    border-radius: 4px;
+    cursor: pointer;
+    width: 100%;
+    margin-top: 2px;
+    padding: 5px;
+}
+
+.card-product {
+    transition: 200ms;
+    max-width: 120px;
+}
+
+.card-product:hover{
+    translate: 0 -10px;
+    box-shadow: 0 10px 5px rgb(226, 223, 222);
+}
+
+.card-product img {
+    width: 100%;
+    aspect-ratio: 1,5;
+}
+
+.card-product button {
+    width: 30px;
+    height: 30px;
 }
 
 /* **********************  MEDIA QUERIES  ****************************** */
